--- a/src/WeatherForecastApp/WeatherForecast.WebApp/Views/Home/Index.cshtml
+++ b/src/WeatherForecastApp/WeatherForecast.WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="text-center mt-5">
+    <h1 class="display-4">Welcome to WeatherForecast Web App</h1>
+    <p class="lead">Get up-to-date weather information for various locations.</p>
+    <a class="btn btn-primary btn-lg mt-4" asp-controller="WeatherForecast" asp-action="Index">
+        Browse Forecasts
+    </a>
 </div>
