--- a/src/WeatherForecastApp/WeatherForecast.WebApp/Views/WeatherForecast/Index.cshtml
+++ b/src/WeatherForecastApp/WeatherForecast.WebApp/Views/WeatherForecast/Index.cshtml
@@ -1,102 +1,61 @@
-﻿@model IEnumerable<WeatherForecast.Infrastructure.Models.LocationViewModel>
+﻿@model IEnumerable< WeatherForecast.WebApp.Models.LocationInListViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="text-center mt-5 mb-5">
+    <h1 class="display-4">Welcome to WeatherForecast Web App</h1>
+    <p class="lead">Check current weather data by selecting a location from the list.</p>
+   @*  <a class="btn btn-primary btn-lg mt-3" asp-controller="WeatherForecast" asp-action="Index">
+        View Forecasts
+    </a> *@
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.LocationId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DepartmentCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PostalCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Latitude)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Longitude)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GenerationtimeMs)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UtcOffsetSeconds)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Timezone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TimezoneAbbreviation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Elevation)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                    @Html.DisplayFor(modelItem => item.LocationId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Department)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DepartmentCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PostalCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Latitude)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Longitude)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GenerationtimeMs)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UtcOffsetSeconds)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Timezone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TimezoneAbbreviation)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Elevation)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h2>Weather Forecast Locations</h2>
+    <a asp-action="Create" class="btn btn-success">Create New Forecast</a>
+</div>
+
+<div class="table-responsive">
+    <table class="table table-striped table-hover align-middle">
+        <thead class="table-light">
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.First().LocationId)</th>
+                <th>@Html.DisplayNameFor(model => model.First().Department)</th>
+                <th>@Html.DisplayNameFor(model => model.First().DepartmentCode)</th>
+                <th>@Html.DisplayNameFor(model => model.First().City)</th>
+                <th>@Html.DisplayNameFor(model => model.First().PostalCode)</th>
+                <th>@Html.DisplayNameFor(model => model.First().Latitude)</th>
+                <th>@Html.DisplayNameFor(model => model.First().Longitude)</th>
+                <th>@Html.DisplayNameFor(model => model.First().GenerationtimeMs)</th>
+                <th>@Html.DisplayNameFor(model => model.First().Timezone)</th>
+                <th>@Html.DisplayNameFor(model => model.First().Elevation)</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.LocationId</td>
+                    <td>@item.Department</td>
+                    <td>@item.DepartmentCode</td>
+                    <td>@item.City</td>
+                    <td>@item.PostalCode</td>
+                    <td>@item.Latitude</td>
+                    <td>@item.Longitude</td>
+                    <td>@item.GenerationtimeMs</td>
+                    <td>@item.Timezone</td>
+                    <td>@item.Elevation</td>
+                    <td>
+                        <a class="btn btn-outline-primary btn-sm" asp-action="Details" asp-route-id="@item.LocationId">
+                            View
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
